# code-context-vault-mcp

./: AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: Workflow.drawio
src/: database.py  search.py  server.py
